[gd_scene load_steps=3 format=3 uid="uid://4jhj2mctn8dl"]

[ext_resource type="Script" uid="uid://bo7uptyataatp" path="res://special_scenes/combat_UI/gameover/AreYouSure.gd" id="1"]
[ext_resource type="Theme" uid="uid://dui8cebqku8x5" path="res://interface/themes/olympic_theme.tres" id="2"]

[node name="Sure" type="Control"]
process_mode = 3
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.5
offset_top = -122.0
offset_right = 216.5
offset_bottom = 122.0
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -123.0
offset_right = 144.0
offset_bottom = -32.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
offset_top = 8.0
offset_bottom = 51.0
align = 1
valign = 1
uppercase = true

[node name="Label2" type="Label" parent="."]
anchor_right = 1.0
offset_top = 48.0
offset_bottom = 91.0
theme = ExtResource("2")
text = "go back to menu?"
align = 1
valign = 1
uppercase = true

[node name="YES" type="Button" parent="."]
offset_top = 152.0
offset_right = 150.0
offset_bottom = 203.0
size_flags_vertical = 3
theme = ExtResource("2")
text = "YES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NO" type="Button" parent="."]
offset_left = 282.951
offset_top = 152.587
offset_right = 432.951
offset_bottom = 203.587
size_flags_vertical = 3
theme = ExtResource("2")
text = "NO"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="YES" to="." method="_on_YES_pressed"]
[connection signal="pressed" from="NO" to="." method="_on_NO_pressed"]
